--- a/Auth.Services/Auth.Services.csproj
+++ b/Auth.Services/Auth.Services.csproj
@@ -16,6 +16,8 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.23" />
+		<PackageReference Include="RamsonDevelopers.UtilEmail" Version="1.3.1" />
 		<PackageReference Include="Serilog" Version="3.0.1" />
 	</ItemGroup>
 
