Appsettings modified git ignore modified Removed unused declarations

--- a/Base.Api/appsettings.Development.json
+++ b/Base.Api/appsettings.Development.json
@@ -4,5 +4,32 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "PgDatabase": null
+  },
+
+  "AppConfiguration": {
+    "SiteURL": null,
+    "ApplicationName": null,
+    "JwtSecurityKey": null,
+    "JwtIssuer": null,
+    "JwtAudience": null,
+    "JwtExpiryInHours": null,
+    "AccConfirmPath": null
+  },
+
+  "MailConfiguration": {
+    "Server": null,
+    "Port": null,
+    "UserName": null,
+    "Password": null,
+    "UseSSL": null,
+    "FromName": null,
+    "FromAddress": null,
+    "ReplyToAddress": null
   }
 }
