--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: .Net Build
-      # You may pin to the exact commit or the version.
-      # uses: EasyDesk/action-dotnet-build@d2c47d8701e3ea8db03dcabaacb37204fe123a22
-        uses: EasyDesk/action-dotnet-build@v1.0.0
-        with:
-          path: "."
-      - name: .Net Unit Test
-        uses: RachelGanonNew/Run-All-.Net-Unit-Test@v1.2.1
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v3.2
+      with:
+        dotnet-version: 6.0  # Specify the .NET Core version you need
+
+    - name: Build
+      run: dotnet build --configuration Release
+
+    - name: Test
+      run: dotnet test
