--- a/Settings.Api/Hyperspan.Settings.Api.csproj
+++ b/Settings.Api/Hyperspan.Settings.Api.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\..\Hyperspan\Projects\Hyperspan-DomainConfig\DnsClientApp\src\assets\Images\Logo-Img.png" Link="Logo-Img.png">
+		<None Include="..\150px white-01.png" Link="Logo-Img.png">
 			<PackagePath>\</PackagePath>
 			<Pack>True</Pack>
 		</None>
