--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v2
 
-      - name: "Install dotnet"
-        uses: actions/setup-dotnet@v3.2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: "6.0.x"
+          dotnet-version: 6
 
       - name: "Build AUTH project"
         run: dotnet build ${{ env.AUTH_PROJECT_PATH }} --configuration Release
