build and test workflow modified

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Secreate
-      run: echo ${{ secrets.NUGET_API_KEY }}
-
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Build
-      run: pwd && dotnet build --configuration Release
+      run: dotnet build --configuration Release
 
     - name: Test
       run: dotnet test
