Deploy yaml modified

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,10 +51,10 @@ jobs:
       #   run: dotnet pack ${{ env.SHARED_PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.SHARED_PACKAGE_OUTPUT_DIRECTORY }}
 
       - name: "Push AUTH package"
-        run: dotnet nuget push ${{ env.AUTH_PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg  -s https://api.nuget.org/v3/index.json --skip-duplicate -k ${{ secrets.NUGET_API_KEYF  }}
+        run: dotnet nuget push ${{ env.AUTH_PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg  -k ${{ secrets.NUGET_AUTH_TOKEN  }} -s https://api.nuget.org/v3/index.json --skip-duplicate
 
       # - name: "Push BASE package"
-      #   run: dotnet nuget push ${{ env.BASE_PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg  -s https://api.nuget.org/v3/index.json --skip-duplicate -k ${{ secrets.NUGET_API_KEY }}
+      #   run: dotnet nuget push ${{ env.BASE_PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg  -s https://api.nuget.org/v3/index.json --skip-duplicate -k ${{ secrets.NUGET_AUTH_TOKEN }}
 
       # - name: "Push SHARED package"
-      #   run: dotnet nuget push ${{ env.SHARED_PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg  -s https://api.nuget.org/v3/index.json --skip-duplicate -k ${{ secrets.NUGET_API_KEY }}
+      #   run: dotnet nuget push ${{ env.SHARED_PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg  -s https://api.nuget.org/v3/index.json --skip-duplicate -k ${{ secrets.NUGET_AUTH_TOKEN }}
